# AutoNet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lidar_scan20260215_111447.csv
autonet/: CMakeLists.txt
autonet/clock_sync/: CMakeLists.txt
autonet/clock_sync/src/: clock_sync.c
autonet/discovery/: CMakeLists.txt
autonet/discovery/include/: discovery.h
autonet/discovery/src/: discovery.c
autonet/lidar_data/include/: lidar_data.hpp
autonet/lidar_data/src/: lidar_data.cpp
autonet/lidar_measurement/include/: lidar_measurement.hpp
autonet/lidar_measurement/src/: lidar_measurement.cpp
autonet/netlib/: CMakeLists.txt
autonet/netlib/include/: netlib.h
autonet/netlib/src/: netlib.c
autonet/shared/include/: autonet_types.h
autonet/src/: main.c
clock_sync/: CMakeLists.txt
clock_sync/include/: clock_sync.h
clock_sync/src/: clock_sync.c
data/csv/: distance_20250922_091758.csv  distance_20250922_100112.csv  distance_20250922_102324.csv  distance_20250922_113514.csv  distance_20250922_114300.csv  distance_20250922_121335.csv  distance_20250922_121646.csv  distance_20250922_121952.csv  distance_20250927_185001.csv  distance_20250927_185807.csv  distance_20250927_190936.csv  distance_20250927_191227.csv  distance_20250927_191923.csv  distance_20250927_192202.csv  distance_20250927_192433.csv  distance_20250927_201125.csv  distance_20250927_210046.csv  distance_20250927_210242.csv  distance_20250927_210452.csv  distance_20251001_140734.csv  distance_20251001_141114.csv  distance_20251001_141601.csv  distance_20251001_141740.csv  distance_20251001_143447.csv  distance_20251001_143548.csv  distance_20251001_143810.csv  distance_20251001_144144.csv  distance_20251001_144259.csv  distance_20251001_144420.csv  distance_20251002_041155_24cm.csv  distance_20251002_041507_24cm.csv  distance_20251002_041600_24cm.csv  distance_20251002_041702_24cm.csv  distance_20251002_043603_16cm.csv  distance_20251002_043716_16cm.csv  distance_20251002_043905_16cm.csv  distance_20251002_044336_32cm.csv  distance_20251002_044418_32cm.csv  distance_20251002_044601_32cm.csv  distance_20251002_044653_32cm.csv  (+27 more)
discovery/: CMakeLists.txt
discovery/include/: discovery.h
discovery/src/: discovery.c
include/: distance.h  logger.h  main.h  networkMan.h  ultrawb.h
lib/BNet/: CMakeLists.txt  README.md  setMonitor.sh
lib/BNet/include/BNet/: BNet.h  netManager.h  netUtils.h
lib/BNet/src/: netManager.c  netUtils.c  queue.c
lib/BNet/src/include/: parameters.h  queue.h
lidar_data/: CMakeLists.txt
lidar_data/include/: lidar_data.hpp
lidar_data/src/: lidar_data.cpp
netlib/: CMakeLists.txt
netlib/include/: netlib.h
network/: CMakeLists.txt
network/include/: netqueue.h
network/netlib/include/: netlib.h
network/netlib/src/: netlib.c
network/src/: main.c  netqueue.c
old/src/cpp_lidar_tools/: CMakeLists.txt  package.xml
scripts/: setup.sh
shared/include/: autonet_types.h
src/: distance.c  distance.h  logger.c  main.c  main.cpp  networkMan.c  ultrasw.c  ultrawb.c
src/cpp_lidar_tools/: CMakeLists.txt
src/cpp_lidar_tools/launch/: record_scan.launch.py
src/cpp_lidar_tools/src/: scan_to_csv.cpp
src/network/: CMakeLists.txt
src/network/include/: autonet.h
src/network/src/: main.c
src/network/src/include/: main.h
src/test_lidar_pkg/: CMakeLists.txt  package.xml
src/test_lidar_pkg/src/: spinup_test.cpp
